package modelo;
/**
 * Enumerado que representa los tipos de componentes que se pueden encontrar en el sistema de ficheros.
 */
public enum ComponentType {
    ARCHIVO, DIRECTORIO
}
